--- a/index.html
+++ b/index.html
@@ -7,42 +7,48 @@
     <title>Calculadora JS</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div class="wrapper">
-        <section class="screen">
+<body class="bodyTagDay">
+    <div class="switchTheme">
+        <label class="switch">
+            <input type="checkbox" id="Switch">
+            <span class="slider"></span>
+        </label>
+    </div>
+    <div class="wrapperDay">
+        <section class="screenDay">
             0
         </section>
         <section class="calc-buttons">
             <div class="calc-button-row">
-                <button class="calc-button double">C</button>
-                <button class="calc-button">&larr;</button>
-                <button class="calc-button">&divide;</button>
+                <button class="calc-buttonDay double">C</button>
+                <button class="calc-buttonDay">&larr;</button>
+                <button class="calc-buttonDay">&divide;</button>
             </div>
 
             <div class="calc-button-row">
-                <button class="calc-button">7</button>
-                <button class="calc-button">8</button>
-                <button class="calc-button">9</button>
-                <button class="calc-button">&times;</button>
+                <button class="calc-buttonDay">7</button>
+                <button class="calc-buttonDay">8</button>
+                <button class="calc-buttonDay">9</button>
+                <button class="calc-buttonDay">&times;</button>
             </div>
 
             <div class="calc-button-row">
-                <button class="calc-button">4</button>
-                <button class="calc-button">5</button>
-                <button class="calc-button">6</button>
-                <button class="calc-button">&minus;</button>
+                <button class="calc-buttonDay">4</button>
+                <button class="calc-buttonDay">5</button>
+                <button class="calc-buttonDay">6</button>
+                <button class="calc-buttonDay">&minus;</button>
             </div>
 
             <div class="calc-button-row">
-                <button class="calc-button">1</button>
-                <button class="calc-button">2</button>
-                <button class="calc-button">3</button>
-                <button class="calc-button">&plus;</button>
+                <button class="calc-buttonDay">1</button>
+                <button class="calc-buttonDay">2</button>
+                <button class="calc-buttonDay">3</button>
+                <button class="calc-buttonDay">&plus;</button>
             </div>
 
             <div class="calc-button-row">
-                <button class="calc-button triple">0</button>
-                <button class="calc-button">&equals;</button>
+                <button class="calc-buttonDay triple">0</button>
+                <button class="calc-buttonDay">&equals;</button>
             </div>
 
         </section>
